--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -46,6 +46,15 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
 }
 
+.iconsDelete {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: red;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
+
 /* Media Queries */
 @media screen and (max-width: 900px) {
     .card {
